fixed alignment for responsive views

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -6,13 +6,13 @@
 		width:40px;
 	}
 	.menubar {
-		padding: 10px 10px 0px!important;
+		padding: 5px 10px 0px!important;
 	}
 	#btn-aboutme {
-		margin-top:55px !important;
+		margin-top:50px !important;
 	}
 	.footer-right {
-		margin-top: -62px;
+		margin-top: -55px;
 	}
 	.button3, .button4{
 		height: 468px !important;
@@ -20,6 +20,15 @@
 	.col-sm-7 {
 		height:470px !important;
 	}
+	.snippet {
+		width: 90% !important;
+	}
+	#aboutme > .row > .col-sm-12 {
+	max-width:100% !important;
+	margin-left:0 !important;
+}
+
+
 }
 ::selection{
 	background:none;
@@ -45,6 +54,7 @@ h1{
 	font: 50px century gothic;
 	color: #40413f;
 	text-align:center;
+	margin:15px;
 	}
 h2{
 	font: 16px century gothic;
@@ -119,10 +129,9 @@ span {
 	}
 .menubar{
 	width:100%;
-	padding: 10px 10px 0px 10px;
+	padding: 10px 10px 10px 10px;
 	border-spacing:0px;
 	background-color:#FFFFFF;
-	border-bottom: 4px solid #FFFFFF;
 	box-shadow: 0px 10px 10px hsla(0,0%,0%,0.3);
 	-webkit-box-shadow: 0px 10px 10px rgba(86, 86, 86, 0.5);
 	-moz-box-shadow: 0px 10px 10px rgba(86, 86, 86, 0.5);
@@ -145,9 +154,6 @@ ul{
 	}
 li{
 	display:inline;
-	}
-div{
-	/*width:1280px;*/
 	}
 .menubar button{
 	color:#40413f;
@@ -174,11 +180,16 @@ footer{
 	}
 .footer-left {
 	padding-top:20px;
-	padding-left:10px;
+}
+.footer-left > p {
+	margin:0px;
 }
 .footer-right{
 	padding-right:0px;
 	}
+.footer-right > p {
+	margin:0px;
+}
 .wrapper-content table{
 	padding:0px;
 	margin:0px;
@@ -386,6 +397,10 @@ footer{
 #aboutme {
 	padding: 30px;
 }
+#aboutme > .row > .col-sm-12 {
+	max-width:50%;
+	margin-left:25%;
+}
 .full-width {
 	width: 100%;
 	max-width:1280px;
@@ -454,5 +469,5 @@ input{
     text-align: left;
 }
 .logo {
-	margin:18px 15px -10px 12px;
+	margin-bottom:5px;
 	width:30px;
